k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-lab
  labels:
    name: k8s-lab
