k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-lab-api
  namespace: k8s-lab
spec:
  selector:
    matchLabels:
      app: k8s-lab-api
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-lab-api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: k8s-lab-api
        image:  ghcr.io/OWNER/k8s-lab-api:IMAGE_TAG_PLACEHOLDER
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 5"]
