k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-lab-api
  namespace: k8s-lab
  labels:
    app: k8s-lab-api
spec:
  selector:
    app: k8s-lab-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
